force-app/main/default/objects/WRDB_ChannelInfo__mdt/WRDB_ChannelInfo__mdt.object-meta.xml
<CustomObject>
    <label>WRDB_ChannelInfo</label>
    <pluralLabel>WRDB_ChannelInfos</pluralLabel>
</CustomObject>