force-app/main/default/objects/WRDB_ChannelInfo__mdt/fields/Deeplink__c.field-meta.xml
<CustomField>
    <fullName>Deeplink__c</fullName>
    <label>Deeplink</label>
    <type>Url</type>
</CustomField>