force-app/main/default/objects/WRDB_ChannelInfo__mdt/fields/logoUrl__c.field-meta.xml
<CustomField>
    <fullName>logoUrl__c</fullName>
    <label>logoUrl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>