force-app/main/default/objects/WRDB_ChannelInfo__mdt/fields/SentPreviewType__c.field-meta.xml
<CustomField>
    <fullName>SentPreviewType__c</fullName>
    <label>SentPreviewType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base64</fullName>
                <default>true</default>
                <label>Base64</label>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Url</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>